syntax = "proto3";

option go_package = "github.com/cameronbrill/brill-wtf-go/grpc";

package grpc;

service LinkService {
  rpc NewLink(NewLinkRequest) returns (NewLinkResponse) {}
  rpc ShortURLToLink(ShortURLToLinkRequest) returns (ShortURLToLinkResponse) {}
}

message Link {
  int64 id = 1;
  string original = 2;
  string short = 3;
}

message NewLinkRequest {
  string original = 1;
}
  
message NewLinkResponse {
  Link link = 1;
}

message ShortURLToLinkRequest {
  string short = 1;
}

message ShortURLToLinkResponse {
  Link link = 1;
}
